--- a/predicted_sysmtom.ipynb
+++ b/predicted_sysmtom.ipynb
@@ -22,7 +22,8 @@
     "from sklearn.metrics import confusion_matrix\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import matplotlib.font_manager as fm"
+    "import matplotlib.font_manager as fm\n",
+    "import random"
    ]
   },
   {
@@ -2669,10 +2670,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import random\n",
-    "\n",
     "\n",
     "symptom_options = [\n",
     "    ['เสมหะ', 'ไอ'],\n",
